# tts-arena

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/results/: benchmark_latest.json  chatterbox.json  fish-audio.json
scripts/: run_chatterbox.py
src/tts_arena/: __init__.py  cli.py
src/tts_arena/benchmarks/: runner.py
src/tts_arena/datasets/: __init__.py
src/tts_arena/engines/: __init__.py  bark_engine.py  base.py  dia_engine.py  f5tts_engine.py  kokoro_engine.py  registry.py
src/tts_arena/reporting/: __init__.py
src/tts_bench/: __init__.py  cli.py
src/tts_bench/benchmarks/: __init__.py  runner.py
src/tts_bench/datasets/: __init__.py
src/tts_bench/engines/: __init__.py  chatterbox_engine.py  fish_audio_engine.py  registry.py
src/unitts/: __init__.py  cli.py
src/unitts/benchmarks/: runner.py
src/unitts/engines/: __init__.py  base.py  chatterbox_engine.py  fish_audio_engine.py  registry.py
tests/: conftest.py
tests/unit/: test_engines.py
