[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts-bench"
version = "0.1.0"
description = "A Python toolkit for running and comparing open-source TTS models."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Aynur Susuz", email = "aynur.susuz.5561@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "torch>=2.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
chatterbox = ["chatterbox-tts"]
fish-audio = [
    "fish-speech @ git+https://github.com/fishaudio/fish-speech.git",
    "huggingface_hub>=0.24",
]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
tts-bench = "tts_bench.cli:app"

[project.urls]
Homepage = "https://github.com/aynursusuz/tts-bench"
Repository = "https://github.com/aynursusuz/tts-bench"
Issues = "https://github.com/aynursusuz/tts-bench/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.hatch.metadata]
# Required for the fish-audio extra, which pulls fish-speech directly from
# its GitHub repository (it is not on PyPI).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tts_bench"]
